add tests and remove useless scripts