@@ -1,14 +1,11 @@
 package com.example.producingwebservice.testData;
 
-import com.example.producingwebservice.entity.Task;
 import com.example.producingwebservice.model.EmployeeDto;
 import org.modelmapper.ModelMapper;
 
 import java.util.Collections;
-import java.util.Set;
+import java.util.List;
 
-import static com.example.producingwebservice.testData.TaskTestData.getSecondTask;
-import static com.example.producingwebservice.testData.TaskTestData.getThirdTask;
 import static com.example.producingwebservice.type.Position.*;
 
 public class EmployeeTestData {
@@ -16,17 +13,16 @@ public class EmployeeTestData {
     private static final ModelMapper modelMapper = new ModelMapper();
 
     public static EmployeeDto getFirstEmployeeDto() {
-        return new EmployeeDto(1,
+        return new EmployeeDto(null,
                 "firstUUID",
                 "first test employee",
                 "55000",
                 WORKER,
-                Set.of(modelMapper.map(getSecondTask(), Task.class),
-                        modelMapper.map(getThirdTask(), Task.class)));
+                Collections.emptySet());
     }
 
     public static EmployeeDto getSecondEmployeeDto() {
-        return new EmployeeDto(2,
+        return new EmployeeDto(null,
                 "secondUUID",
                 "second test employee",
                 "105000",
@@ -35,20 +31,35 @@ public class EmployeeTestData {
     }
 
     public static EmployeeDto getThirdEmployeeDto() {
-        return new EmployeeDto(3,
+        return new EmployeeDto(null,
                 "thirdUUID",
                 "third test employee",
                 "155000",
                 DIRECTOR,
-                Set.of(modelMapper.map(getFirstEmployeeDto(), Task.class)));
+                Collections.emptySet());
+    }
+
+    public static EmployeeDto getFourthEmployeeDto() {
+        return new EmployeeDto(null,
+                "fourthUUID",
+                "fourth test employee",
+                "55000",
+                WORKER,
+                Collections.emptySet());
     }
 
     public static EmployeeDto getEmployeeDtoForSave() {
-        return new EmployeeDto(4,
-                "fourthUUID",
-                "fourth test employee",
-                "156000",
-                DIRECTOR,
+        return new EmployeeDto(null,
+                "forSaveUUID",
+                "forSave test employee",
+                "55000",
+                WORKER,
                 Collections.emptySet());
+    }
+
+    public static List<EmployeeDto> getEmployeeDtosForSave() {
+        return List.of(
+                getFirstEmployeeDto(),
+                getSecondEmployeeDto());
     }
 }
